# SmartRoom_App

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Main.qml  Main.qml.autosave  README.md  android-appSmartRoom-deployment-settings.json  appSmartRoom  appsmartroom_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  config.redo  main.cpp  rsource.qrc  systemcontroller.cpp  systemcontroller.h
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  appSmartRoom_qml.cmake  appSmartRoom_res.cmake
.qt/qml_imports/: appSmartRoom_conf.cmake  appSmartRoom_conf.rsp
.qt/rcc/: appSmartRoom_raw_qml_0.qrc  qmake_SmartRoom.qrc  qrc_appSmartRoom_raw_qml_0.cpp  qrc_qmake_SmartRoom.cpp
.qtc_clangd/: compile_commands.json
.rcc/qmlcache/: all_aotstats.aotstatslist  appSmartRoom_CircularProgressBar_qml.cpp  appSmartRoom_CircularProgressBar_qml.cpp.aotstats  appSmartRoom_Main_qml.cpp  appSmartRoom_Main_qml.cpp.aotstats  appSmartRoom_qml_loader_file_list.rsp  appSmartRoom_qmlcache_loader.cpp  module_appSmartRoom.aotstatslist
.rcc/qmllint/: appSmartRoom.rsp  appSmartRoom_json.rsp  appSmartRoom_module.rsp
SmartRoom/: appSmartRoom_qml_module_dir_map.qrc  rsource.qrc
android/: AndroidManifest.xml
android-build-appSmartRoom/: AndroidManifest.xml  build.gradle  gradle.properties  local.properties
android-build-appSmartRoom/assets/: android_rcc_bundle.rcc
appSmartRoom_autogen/: deps  moc_predefs.h
appSmartRoom_autogen/EWIEGA46WW/: moc_systemcontroller.cpp  moc_systemcontroller.cpp.d  moc_systemcontroller.cpp.json
include/QtMqtt/: qmqttauthenticationproperties.h  qmqttclient.h  (+10 more)
lib/: libQt6Mqtt_armeabi-v7a.prl
meta_types/: appSmartRoom_json_file_list.txt  appSmartRoom_json_file_list.txt.timestamp  qt6appsmartroom_debug_metatypes.json.gen
modules/: Mqtt.json
qmltypes/: appSmartRoom_foreign_types.txt
(+1159 files in other folders)
